Fix: Recipe details coloring and spacing

--- a/app/components/recipeDetails.component.css
+++ b/app/components/recipeDetails.component.css
@@ -24,23 +24,28 @@
 .bookmark {
     font-family: 'icomoon';
     font-size: 30;
+    color: #31db97;
+}
+
+.oddBackground {
+    background-color: rgba(233, 245, 247, 0.94);
 }
 
 .unit {
     color: black;
-    font-size: 16;
+    font-size: 14;
     font-weight: 400;
 }
 
 .ingredient {
     color: black;
-    font-size: 18;
+    font-size: 14;
     font-weight: 500;
 }
 
 .direction {
     color: black;
-    font-size: 18;
+    font-size: 14;
     font-weight: 400;
 }
 
